@@ -116,7 +116,7 @@ script:
   - cmake -DCMAKE_INSTALL_PREFIX=${HOME} -DIBEX_ROOT=${HOME}/ibex -DPYTHON_VERSION=${version} -DPYBIND11_PYTHON_VERSION=$PYTHON -DPYBIND11_CPP_STANDARD=$CPP ../ ;
   - make && make install
 
-  - make test
+  - make test ARGS="-VV"
   - make pip_package
   - export wheel_file=$(ls *.whl)
   # - if [  $TRAVIS_OS_NAME == linux ]; then
