@@ -1,10 +1,11 @@
 from .pyibex import *
 from .pysivia import pySIVIA
-from .pySepPaving import pySepPaving
 from .version import __version__
-from .minkowsky_ops import SepSum, SepDiff
-from .paving import SepPaving
-from .sepvisitor import SepToVibes
-from .septotikz import SepToTikz
+
+# from .minkowsky_ops import SepSum, SepDiff
+# from .pySepPaving import pySepPaving
+# from .paving import SepPaving
+# from .sepvisitor import SepToVibes
+# from .septotikz import SepToTikz
 
 # try to import geometry module
