@@ -221,11 +221,11 @@ void SepProj::separate(IntervalVector &x_in, IntervalVector &x_out){
         IntervalVector y0(y);
         if (( x_in | x_out_save ) != x_old0){
           std::cerr << "##########################################################################\n";
-          std::cerr << std::hexfloat;
+          //std::cerr << std::hexfloat;
           std::cerr << "x_in     " <<  x_in << "\n";
           std::cerr << "x_out    " <<  x_out_save << "\n";
           std::cerr << "x_old0 " <<  x_old0 << "\n";
-          std::cerr << std::defaultfloat;
+          //std::cerr << std::defaultfloat;
           std::cerr << "##########################################################################\n";
           // assert( ( x_in | x_out_save ) == x_old0);
         }
@@ -237,10 +237,10 @@ void SepProj::separate(IntervalVector &x_in, IntervalVector &x_out){
         // std::cerr << "x: " << x << " x_in: " << x_in << " x_out: " << x_out_save << "\n"
                   // << "x_res " << x_res  <<  " y: "  << y << "\n";
         if ( ! (( x_in | x_out_save ) == x_old0)){
-          std::cerr << x_in << " " << x_out_save << " \n" << x_old0 << "\n";
-          std::cerr << std::hexfloat << x_in << " \n" << x_out_save << "\n";
-          std::cerr << x_old0 << std::defaultfloat << "\n";
-          std::cerr << l.size() << "\n";
+          // std::cerr << x_in << " " << x_out_save << " \n" << x_old0 << "\n";
+          // std::cerr << std::hexfloat << x_in << " \n" << x_out_save << "\n";
+          // std::cerr << x_old0 << std::defaultfloat << "\n";
+          // std::cerr << l.size() << "\n";
           assert( ( x_in | x_out_save ) == x_old0);
         }
         // std::cerr << x.is_empty() << " " << (x.max_diam()) << " " << prec << " " << y.is_empty() << " " << y.max_diam() << " " << x.max_diam() << " " << l.size()<< "\n";
