@@ -6,6 +6,12 @@ All notable changes to this project will be documented in this file.
 
 The format is based on [Keep a Changelog](http://keepachangelog.com/)
 and this project adheres to [Semantic Versioning](http://semver.org/).
+2018-02-25 Benoit Desrochers <ben.ensta@gmail.com>
+  * [update] pybind11 version > 2.2.1 (#b48d4a)
+  * [update] doc
+  * [new] CtcHull and CtcPaving
+  * [new] Paving object
+  
 2017-09-12 Benoit Desrochers <ben.ensta@gmail.com>
   * PATCH v1.6.3b
   * [add] Interval Matrix shape function (need to be converted in property)
